bk_ida/gccida/g0/get_alias_set_entry
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_alias_set_entry/src/alias.c:662:1: error: unknown type name 'alias_set_entry_0'; did you mean 'alias_set_entry'?
alias_set_entry_0  maybe_lookup_ctx( __int64 alias_set) 
^~~~~~~~~~~~~~~~~
alias_set_entry
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_alias_set_entry/src/alias.c:87:4: note: 'alias_set_entry' declared here
} *alias_set_entry;
   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_alias_set_entry/src/alias.c:668:10: error: use of undeclared identifier 'alias_set_entry_0'
return ( alias_set_entry_0)sn->value; 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_alias_set_entry/src/obj/alias.o] Error 1
